fix: verticall alignment of sidebar

--- a/apps/commudle-admin/src/app/components/sidebar-menu/sidebar-menu.component.scss
+++ b/apps/commudle-admin/src/app/components/sidebar-menu/sidebar-menu.component.scss
@@ -8,7 +8,7 @@
     color: grey;
 
     fa-icon {
-      @apply com-h-[20px] com-w-[20px] com-mr-2;
+      @apply com-h-20px com-w-20px com-mr-2;
     }
 
     span {
