--- a/apps/commudle-admin/src/app/feature-modules/community-control-panel/components/community-events-list/community-events-list.component.scss
+++ b/apps/commudle-admin/src/app/feature-modules/community-control-panel/components/community-events-list/community-events-list.component.scss
@@ -1,5 +1,5 @@
 .community-events-list {
-  @apply com-px-0 com-py-6;
+  @apply md:com-px-0 com-py-6 com-px-6;
 
   .page-actions {
     @apply com-p-0 com-pb-4;
